--- a/.github/workflows/build-mac.yml
+++ b/.github/workflows/build-mac.yml
@@ -48,30 +48,22 @@ jobs:
           APPLE_TEAM: ${{ secrets.APPLE_TEAM }}
           KEYCHAIN_PASSWORD: ${{ secrets.MAC_CERT_PASSWORD }}
         run: |
-          # create variables for file paths
+          # Create variables for file paths
           CERT_BUILD_PATH=$RUNNER_TEMP/build_certificate.p12
           CERT_INSTALLER_PATH=$RUNNER_TEMP/installer_certificate.p12
           KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
 
-          # import certificates from secrets
+          # Import certificates from secrets
           echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode -o $CERT_BUILD_PATH
           echo -n "$INSTALLER_CERTIFICATE_BASE64" | base64 --decode -o $CERT_INSTALLER_PATH
-          
-          # Verify certificates are different
-          echo "Checking certificate types..."
-          openssl pkcs12 -in $CERT_BUILD_PATH -passin pass:"$P12_PASSWORD" -nokeys -clcerts 2>/dev/null | openssl x509 -noout -subject
-          openssl pkcs12 -in $CERT_INSTALLER_PATH -passin pass:"$P12_PASSWORD" -nokeys -clcerts 2>/dev/null | openssl x509 -noout -subject
 
-          # create temporary keychain
+          # Create temporary keychain
           security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
           security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
           security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
 
-          # import certificates to keychain with verbose output
-          echo "Importing Application certificate..."
+          # Import certificates to keychain
           security import $CERT_BUILD_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH -T /usr/bin/codesign -T /usr/bin/productsign -T /usr/bin/productbuild
-          
-          echo "Importing Installer certificate..."
           security import $CERT_INSTALLER_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH -T /usr/bin/codesign -T /usr/bin/productsign -T /usr/bin/productbuild
           
           # Add keychain to search list
@@ -79,65 +71,19 @@ jobs:
           
           # Set partition list to allow codesign and productbuild to access the certificates
           security set-key-partition-list -S apple-tool:,apple:,codesign:,productbuild:,productsign: -s -k "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-          
-          # Verify both certificates are imported
-          echo "Verifying imported certificates..."
-          security find-identity -v -p codesigning $KEYCHAIN_PATH
-          security find-identity -v -p basic $KEYCHAIN_PATH
 
-          # create notarytool profile - profile name is positional, not a flag
-          echo "Creating notary profile in custom keychain..."
+          # Create notarytool profile
           xcrun notarytool store-credentials "velopack-profile" \
             --apple-id "$APPLE_ID" \
             --team-id "$APPLE_TEAM" \
             --password "$APPLE_PASSWORD" \
             --keychain "$KEYCHAIN_PATH"
-          
-          # Verify the profile was created
-          echo "Verifying notary profile..."
-          xcrun notarytool show-profile "velopack-profile" --keychain "$KEYCHAIN_PATH" || echo "Failed to verify notary profile"
 
-      - name: Debug Keychain and Notary Setup
+      - name: Create Installer
         env:
           KEYCHAIN_PASSWORD: ${{ secrets.MAC_CERT_PASSWORD }}
         run: |
-          echo "=== Debugging Keychain and Notary Setup ==="
-          echo "Current directory: $(pwd)"
-          echo "Keychain path: $RUNNER_TEMP/app-signing.keychain-db"
-          
-          # List all keychains
-          echo "\n=== Current keychains ==="
-          security list-keychains
-          
-          # Show keychain settings
-          echo "\n=== Keychain settings ==="
-          security show-keychain-info $RUNNER_TEMP/app-signing.keychain-db || true
-          
-          # List all identities available for code signing
-          echo "\n=== Code signing identities ==="
-          security find-identity -v -p codesigning $RUNNER_TEMP/app-signing.keychain-db
-          
-          # List all identities available for installer signing
-          echo "\n=== Installer signing identities ==="
-          security find-identity -v -p basic $RUNNER_TEMP/app-signing.keychain-db
-          
-          # List all notary profiles in the custom keychain
-          echo "\n=== Notary profiles in custom keychain ==="
-          xcrun notarytool list-keychain-profiles --keychain $RUNNER_TEMP/app-signing.keychain-db || true
-          
-          # Show notary profile details
-          echo "\n=== Notary profile details ==="
-          xcrun notarytool show-profile velopack-profile --keychain $RUNNER_TEMP/app-signing.keychain-db || true
-          
-          # List all certificates in the keychain with details
-          echo "\n=== Certificates in keychain ==="
-          security find-certificate -a -c "Developer ID" -p $RUNNER_TEMP/app-signing.keychain-db | openssl x509 -noout -subject -dates || true
-
-      - name: Create Installer with Debug
-        env:
-          KEYCHAIN_PASSWORD: ${{ secrets.MAC_CERT_PASSWORD }}
-        run: |
-          # Make sure keychain is unlocked and set as default
+          # Unlock keychain and set as default
           security unlock-keychain -p "$KEYCHAIN_PASSWORD" $RUNNER_TEMP/app-signing.keychain-db
           security set-keychain-settings -lut 3600 $RUNNER_TEMP/app-signing.keychain-db
           security default-keychain -s $RUNNER_TEMP/app-signing.keychain-db
@@ -145,14 +91,9 @@ jobs:
           # Ensure keychain is in the search list
           security list-keychains -d user -s $RUNNER_TEMP/app-signing.keychain-db $(security list-keychains -d user | sed s/\"//g)
           
-          # Verify signing identities are accessible
-          echo "=== Verifying signing identities ==="
-          security find-identity -v -p codesigning
-          security find-identity -v -p basic
-          
           cd src/MakaMek.Avalonia/MakaMek.Avalonia.Desktop
           
-          # Run vpk with verbose output and explicit keychain
+          # Run vpk to create installer
           vpk pack \
             --packId nl.sanetby.makamek \
             --packVersion ${{ env.APP_VERSION }} \
@@ -165,8 +106,7 @@ jobs:
             --signAppIdentity "Developer ID Application: Anton Makarevich" \
             --signInstallIdentity "Developer ID Installer: Anton Makarevich" \
             --notaryProfile "velopack-profile" \
-            --keychain $RUNNER_TEMP/app-signing.keychain-db \
-            --verbose
+            --keychain $RUNNER_TEMP/app-signing.keychain-db
 
       # For tagged releases only
       - name: Create Release
