--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -35,8 +35,8 @@ jobs:
       - name: Build Linux App
         run: |
           cd src/MakaMek.Avalonia/MakaMek.Avalonia.Desktop
-          dotnet publish -c Release -r linux-x64 -o publish
-          vpk pack --packId nl.sanetby.mekforge \
+          dotnet publish -c Release -r linux-x64 --self-contained true -o publish
+          vpk pack --packId nl.sanetby.makamek \
                    --packVersion ${{ env.APP_VERSION }} \
                    --packDir publish \
                    --mainExe MakaMek \
@@ -51,7 +51,7 @@ jobs:
           files: src/MakaMek.Avalonia/MakaMek.Avalonia.Desktop/Releases/*AppImage
           draft: false
           prerelease: false
-          generate_release_notes: true
+          generate_release_notes: false # Only one pipeline generates release notes
           
       # For all builds (including main branch pushes and manual runs)
       - name: Upload Installer as Artifact
