--- a/.github/workflows/build-mac.yml
+++ b/.github/workflows/build-mac.yml
@@ -116,7 +116,7 @@ jobs:
           files: src/MakaMek.Avalonia/MakaMek.Avalonia.Desktop/Releases/*.pkg
           draft: false
           prerelease: false
-          generate_release_notes: true
+          generate_release_notes: false # Only one pipeline generates release notes
       
       # For all builds (including main branch pushes and manual runs)
       - name: Upload Installer as Artifact
