--- a/.github/workflows/bots.yml
+++ b/.github/workflows/bots.yml
@@ -25,7 +25,11 @@ jobs:
         run: dotnet test tests/MakaMek.Bots.Tests/MakaMek.Bots.Tests.csproj /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:ExcludeByAttribute=GeneratedCodeAttribute /p:Include=[Sanet.MakaMek.Bots]*
 
       - name: Upload Bots tests results
-        run: bash <(curl -s https://codecov.io/bash) -f "tests/MakaMek.Bots.Tests/coverage.opencover.xml" -t ${{ secrets.CODECOV_TOKEN }}
+        uses: codecov/codecov-action@v4
+        with:
+          files: ./tests/MakaMek.Bots.Tests/coverage.opencover.xml
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: true
   
   publish-nuget:
     runs-on: ubuntu-latest
