--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Set up .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '9.x'
+          dotnet-version: 10.x
 
       - name: Create nuget packages
         run: |
