feat: wire botmanager to vms

--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/MakaMek.Avalonia.csproj
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/MakaMek.Avalonia.csproj
@@ -35,6 +35,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\MakaMek.Bots\MakaMek.Bots.csproj" />
       <ProjectReference Include="..\..\MakaMek.Core\MakaMek.Core.csproj" />
       <ProjectReference Include="..\..\MakaMek.Presentation\MakaMek.Presentation.csproj" />
     </ItemGroup>
