--- a/.github/workflows/presentation.yml
+++ b/.github/workflows/presentation.yml
@@ -3,7 +3,25 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'src/MakaMek.Presentation/**'
+      - 'src/MakaMek.Bots/**'
+      - 'src/MakaMek.Core/**'
+      - 'src/MakaMek.SourceGenerators/**'
+      - 'tests/MakaMek.Presentation.Tests/**'
+      - 'tests/MakaMek.Core.Tests/**'
+      - 'src/MakaMek.Avalonia/MakaMek.Avalonia/Resources/Units/Mechs/**'
+      - '.github/workflows/presentation.yml'
   pull_request:
+    paths:
+      - 'src/MakaMek.Presentation/**'
+      - 'src/MakaMek.Bots/**'
+      - 'src/MakaMek.Core/**'
+      - 'src/MakaMek.SourceGenerators/**'
+      - 'tests/MakaMek.Presentation.Tests/**'
+      - 'tests/MakaMek.Core.Tests/**'
+      - 'src/MakaMek.Avalonia/MakaMek.Avalonia/Resources/Units/Mechs/**'
+      - '.github/workflows/presentation.yml'
 
   workflow_dispatch:
 env:
