--- a/src/MakaMek.Bots/MakaMek.Bots.csproj
+++ b/src/MakaMek.Bots/MakaMek.Bots.csproj
@@ -16,6 +16,10 @@
     <ItemGroup>
       <ProjectReference Include="..\MakaMek.Core\MakaMek.Core.csproj" />
     </ItemGroup>
+    
+    <ItemGroup>
+      <Folder Include="Models\TurnState\" />
+    </ItemGroup>
 
 </Project>
 
