--- a/src/MakaMek.Core/MakaMek.Core.csproj
+++ b/src/MakaMek.Core/MakaMek.Core.csproj
@@ -17,6 +17,8 @@
       <PackageReference Include="AsyncAwaitBestPractices" Version="10.0.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.1" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Logging" Version="10.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="10.0.1" />
       <PackageReference Include="Sanet.Transport.Rx" Version="1.0.2" />
       <PackageReference Include="Sanet.Transport.SignalR.Client" Version="0.5.0" />
       <PackageReference Include="System.Reactive" Version="6.1.0" />
