fix: register missing dependencies

--- a/src/MakaMek.Tools/BotContainer/appsettings.json
+++ b/src/MakaMek.Tools/BotContainer/appsettings.json
@@ -11,12 +11,8 @@
     "BotName": "IntegrationBot_01",
     "BotTeam": "#00FF00",
     "Units": [
-      {
-        "Name": "WSP-1A.mtf"
-      },
-      {
-        "Name": "STG-3R.mtf"
-      }
+      "WSP-1A",
+      "STG-3R"
     ]
   }
 }
