--- a/src/MakaMek.Tools/BotAgent.Models/BotAgent.Models.csproj
+++ b/src/MakaMek.Tools/BotAgent.Models/BotAgent.Models.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\MakaMek.Core\MakaMek.Core.csproj" />
+  </ItemGroup>
+
 </Project>
