--- a/src/MakaMek.Tools/BotAgent/BotAgent.csproj
+++ b/src/MakaMek.Tools/BotAgent/BotAgent.csproj
@@ -9,12 +9,15 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.2" />
     <PackageReference Include="Microsoft.Agents.AI" Version="1.0.0-preview.260108.1" />
-    <PackageReference Include="Microsoft.Agents.AI.OpenAI" Version="1.0.0-preview.260108.1" />
+    <PackageReference Include="Microsoft.Extensions.AI" Version="10.2.0" />
+    <PackageReference Include="Microsoft.Extensions.AI.Abstractions" Version="10.2.0" />
+    <PackageReference Include="Microsoft.Extensions.AI.OpenAI" Version="10.2.0-preview.1.26063.2" />
     <PackageReference Include="ModelContextProtocol" Version="0.6.0-preview.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\BotAgent.Models\BotAgent.Models.csproj" />
+    <ProjectReference Include="..\..\MakaMek.Core\MakaMek.Core.csproj" />
   </ItemGroup>
 
 </Project>
