feat: introduce llm specific engines

--- a/src/MakaMek.Tools/BotContainer/appsettings.json
+++ b/src/MakaMek.Tools/BotContainer/appsettings.json
@@ -14,5 +14,10 @@
       "WSP-1A",
       "STG-3R"
     ]
+  },
+  "BotAgent": {
+    "ApiUrl": "http://localhost:5244",
+    "McpServerUrl": "http://localhost:5002/mcp",
+    "Timeout": 30000
   }
 }
