--- a/src/MakaMek.Tools/BotContainer/BotContainer.csproj
+++ b/src/MakaMek.Tools/BotContainer/BotContainer.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\MakaMek.Core\MakaMek.Core.csproj" />
     <ProjectReference Include="..\..\MakaMek.Bots\MakaMek.Bots.csproj" />
+    <ProjectReference Include="..\BotAgent.Models\BotAgent.Models.csproj" />
   </ItemGroup>
 
 </Project>
