--- a/src/MakaMek.Tools/BotContainer/BotContainer.csproj
+++ b/src/MakaMek.Tools/BotContainer/BotContainer.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ModelContextProtocol" Version="0.6.0-preview.1" />
+    <PackageReference Include="ModelContextProtocol.AspNetCore" Version="0.6.0-preview.1" />
     <PackageReference Include="System.Reactive" Version="6.1.0" />
   </ItemGroup>
 
