feat: update instructions even more

--- a/src/MakaMek.Tools/BotAgent/appsettings.json
+++ b/src/MakaMek.Tools/BotAgent/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "LlmProvider": {
     "Type": "LocalOpenAI",
-    "Model": "qwen/qwen3-vl-8b",
+    "Model": "openai/gpt-oss-20b",
     "Timeout": 30000,
     "ApiKey": "",
     "Endpoint": "http://localhost:1234/v1"
