--- a/.github/workflows/botagent-docker.yml
+++ b/.github/workflows/botagent-docker.yml
@@ -6,15 +6,11 @@ on:
       - main
     paths:
       - 'src/MakaMek.Tools/BotAgent/**'
-      - 'src/MakaMek.Core/**'
-      - 'src/MakaMek.SourceGenerators/**'
       - 'src/MakaMek.Tools/BotAgent.Models/**'
       - '.github/workflows/botagent-docker.yml'
   pull_request:
     paths:
       - 'src/MakaMek.Tools/BotAgent/**'
-      - 'src/MakaMek.Core/**'
-      - 'src/MakaMek.SourceGenerators/**'
       - 'src/MakaMek.Tools/BotAgent.Models/**'
       - '.github/workflows/botagent-docker.yml'
   workflow_dispatch:
@@ -24,35 +20,9 @@ env:
   IMAGE_NAME: ${{ github.repository }}/botagent
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: 10.x
-
-      - name: Restore dependencies
-        run: dotnet restore src/MakaMek.Tools/BotAgent/BotAgent.csproj
-
-      - name: Build BotAgent
-        run: dotnet build src/MakaMek.Tools/BotAgent/BotAgent.csproj --no-restore -c Release
-
-      - name: Test BotAgent (if tests exist)
-        run: |
-          if [ -f "tests/MakaMek.Tools.BotAgent.Tests/MakaMek.Tools.BotAgent.Tests.csproj" ]; then
-            dotnet test tests/MakaMek.Tools.BotAgent.Tests/MakaMek.Tools.BotAgent.Tests.csproj --no-build -c Release
-          else
-            echo "No test project found for BotAgent, skipping tests"
-          fi
-
   build-and-push:
     runs-on: ubuntu-latest
-    needs: test
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: (github.event_name == 'push' && github.ref == 'refs/heads/main') || github.event_name == 'workflow_dispatch'
     permissions:
       contents: read
       packages: write
@@ -79,6 +49,9 @@ jobs:
             type=sha,prefix={{branch}}-
             type=raw,value=latest,enable={{is_default_branch}}
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
@@ -92,7 +65,6 @@ jobs:
 
   build-only:
     runs-on: ubuntu-latest
-    needs: test
     if: github.event_name == 'pull_request'
     permissions:
       contents: read
@@ -109,6 +81,9 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=ref,event=pr
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Build Docker image (no push)
         uses: docker/build-push-action@v5
