feat: make cloud openai a default llm provider

--- a/src/MakaMek.Tools/BotAgent/appsettings.json
+++ b/src/MakaMek.Tools/BotAgent/appsettings.json
@@ -8,8 +8,8 @@
   },
   "AllowedHosts": "*",
   "LlmProvider": {
-    "Type": "LocalOpenAI",
-    "Model": "qwen/qwen3-vl-8b",
+    "Type": "OpenAI",
+    "Model": "gpt-5-mini",
     "Timeout": 30000,
     "ApiKey": "",
     "Endpoint": "http://localhost:1234/v1"
