--- a/src/MakaMek.Tools/BotContainer/BotContainer.csproj
+++ b/src/MakaMek.Tools/BotContainer/BotContainer.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>MakaMek.Tools.BotContainer</RootNamespace>
+    <RootNamespace>Sanet.MakaMek.Tools.BotContainer</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
