--- a/src/MakaMek.Tools/BotAgent.Models/BotAgent.Models.csproj
+++ b/src/MakaMek.Tools/BotAgent.Models/BotAgent.Models.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <RootNamespace>Sanet.MakaMek.Tools.BotAgent.Models</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
