--- a/tests/MakaMek.Core.Tests/MakaMek.Core.Tests.csproj
+++ b/tests/MakaMek.Core.Tests/MakaMek.Core.Tests.csproj
@@ -54,6 +54,9 @@
     <None Update="Resources\Wolfhound WLF-1A.mtf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\Atlas AS7-D.mtf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
