--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -7,4 +7,4 @@
         <PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
         <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
-</Project>""
+</Project>
