--- a/src/MakaMek.Avalonia/MakaMek.Avalonia.Browser/MakaMek.Avalonia.Browser.csproj
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia.Browser/MakaMek.Avalonia.Browser.csproj
@@ -21,7 +21,7 @@
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Avalonia.Browser" Version="11.3.12" />
-        <PackageReference Include="Microsoft.DotNet.HotReload.WebAssembly.Browser" Version="10.0.103" />
+        <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Microsoft.DotNet.HotReload.WebAssembly.Browser" Version="10.0.103" PrivateAssets="all" />
     </ItemGroup>
 
     <ItemGroup>
