--- a/.github/workflows/avalonia.yml
+++ b/.github/workflows/avalonia.yml
@@ -48,7 +48,11 @@ jobs:
           if-no-files-found: error
 
       - name: Upload Avalonia tests results
-        run: bash <(curl -s https://codecov.io/bash) -f "tests/MakaMek.Avalonia.Tests/coverage.opencover.xml" -t ${{ secrets.CODECOV_TOKEN }}
+        uses: codecov/codecov-action@v4
+        with:
+          files: ./tests/MakaMek.Avalonia.Tests/coverage.opencover.xml
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: true
   
   publish-nuget:
     runs-on: ubuntu-latest
