--- a/.github/workflows/presentation.yml
+++ b/.github/workflows/presentation.yml
@@ -39,7 +39,11 @@ jobs:
         run: dotnet test tests/MakaMek.Presentation.Tests/MakaMek.Presentation.Tests.csproj /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:ExcludeByAttribute=GeneratedCodeAttribute /p:Include=[Sanet.MakaMek.Presentation]*
 
       - name: Upload Presentation tests results
-        run: bash <(curl -s https://codecov.io/bash) -f "tests/MakaMek.Presentation.Tests/coverage.opencover.xml" -t ${{ secrets.CODECOV_TOKEN }}
+        uses: codecov/codecov-action@v4
+        with:
+          files: ./tests/MakaMek.Presentation.Tests/coverage.opencover.xml
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: true
   
   publish-nuget:
     runs-on: ubuntu-latest
