refactor: move pixel extensions back to map

--- a/tests/MakaMek.Presentation.Tests/MakaMek.Presentation.Tests.csproj
+++ b/tests/MakaMek.Presentation.Tests/MakaMek.Presentation.Tests.csproj
@@ -43,6 +43,7 @@
     <Folder Include="..\..\src\MakaMek.Avalonia\MakaMek.Avalonia\Resources\Units\Mechs\">
       <Link>Resources\Mechs</Link>
     </Folder>
+    <Folder Include="Models\Map\" />
   </ItemGroup>
 
 </Project>
