feat: use logger instead of std output

--- a/src/MakaMek.Avalonia/MakaMek.Avalonia.Controls/MakaMek.Avalonia.Controls.csproj
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia.Controls/MakaMek.Avalonia.Controls.csproj
@@ -24,4 +24,10 @@
     <ProjectReference Include="..\..\MakaMek.Services\MakaMek.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.Extensions.Logging.Abstractions">
+      <HintPath>..\..\..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\10.0.3\Microsoft.Extensions.Logging.Abstractions.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
