--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/MakaMek.Avalonia.csproj
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/MakaMek.Avalonia.csproj
@@ -53,7 +53,12 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Resources\" />
+      <None Remove="Resources\Maps\open-terain-1.json" />
+      <EmbeddedResource Include="Resources\Maps\open-terain-1.json" />
+      <None Remove="Resources\Maps\open-terain-2.json" />
+      <EmbeddedResource Include="Resources\Maps\open-terain-2.json" />
+      <None Remove="Resources\Maps\quick-start.json" />
+      <EmbeddedResource Include="Resources\Maps\quick-start.json" />
     </ItemGroup>
 
     <!-- Debug target to print properties -->
