feat: load maps from the resources

--- a/src/MakaMek.Services/MakaMek.Services.csproj
+++ b/src/MakaMek.Services/MakaMek.Services.csproj
@@ -13,4 +13,8 @@
         <None Include="../../README.md" Pack="true" PackagePath="" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\MakaMek.Map\MakaMek.Map.csproj" />
+    </ItemGroup>
+
 </Project>
