--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/MakaMek.Avalonia.csproj
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/MakaMek.Avalonia.csproj
@@ -51,11 +51,10 @@
         <SubType>Code</SubType>
       </Compile>
     </ItemGroup>
-
+    
     <ItemGroup>
-      <None Remove="Resources\Maps\open-terain-1.json" />
-      <None Remove="Resources\Maps\open-terain-2.json" />
-      <None Remove="Resources\Maps\quick-start.json" />
+      <EmbeddedResource Include="Resources\Maps\open-terrain-1.json" />
+      <EmbeddedResource Include="Resources\Maps\open-terrain-2.json" />
     </ItemGroup>
 
     <!-- Debug target to print properties -->
